--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 	<description>Maven Standalone Application</description>
 
 	<properties>
-		<sonar.host.url>http://13.233.113.142:9000/</sonar.host.url>
+		<sonar.host.url>http://52.66.111.62:9000</sonar.host.url>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
@@ -35,11 +35,11 @@
 	<distributionManagement>
   <repository>
     <id>releases</id>
-    <url>http://13.233.13.226:8081/repository/sreenadh-maven-release/</url>
+    <url>http://13.126.129.127:8081/repository/sreenadh-maven-release/</url>
   </repository>
   <snapshotRepository>
     <id>snapshots</id>
-    <url>http://13.233.13.226:8081/repository/sreenadh-maven-snapshot/</url>
+    <url>http://13.126.129.127:8081/repository/sreenadh-maven-snapshot/</url>
   </snapshotRepository>
 </distributionManagement>
 
